# odoo-mcp-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: gateway.yaml.example  model_access.yaml.example  rbac.yaml.example  restrictions.yaml.example
src/odoo_mcp_gateway/: __init__.py  __main__.py  config.py  server.py
src/odoo_mcp_gateway/cli/: tools.py
src/odoo_mcp_gateway/client/: __init__.py  base.py  exceptions.py  jsonrpc.py  xmlrpc.py
src/odoo_mcp_gateway/core/: __init__.py
src/odoo_mcp_gateway/plugins/: __init__.py  base.py  registry.py
src/odoo_mcp_gateway/prompts/: __init__.py  handlers.py
src/odoo_mcp_gateway/resources/: __init__.py  handlers.py
src/odoo_mcp_gateway/tools/: __init__.py  auth.py  crud.py  schema.py
src/odoo_mcp_gateway/utils/: __init__.py  domain_builder.py  formatting.py  token_budget.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: test_config_validation.py  test_domain_builder.py  test_formatting.py  test_prompts.py  test_resources.py  test_server_wiring.py  test_token_budget.py
tests/unit/cli/: test_tools.py
tests/unit/client/: test_admin_derivation.py  test_auth_manager.py  test_connection_manager.py  test_exceptions.py  test_jsonrpc_client.py  test_version_adapters.py  test_version_detector.py  test_xmlrpc_client.py  test_xmlrpc_security.py
tests/unit/discovery/: test_field_inspector.py  test_model_registry.py  test_suggestions.py
tests/unit/plugins/: test_helpdesk_plugin.py  test_hr_plugin.py  test_plugin_base.py  test_plugin_helpers.py  test_plugin_registry.py  test_plugin_security.py  test_project_plugin.py  test_sales_plugin.py
tests/unit/security/: __init__.py  test_audit.py  test_config_loader.py  test_middleware.py  test_rate_limit.py  test_rbac.py  test_restrictions.py  test_sanitizer.py  test_security_gate.py
tests/unit/tools/: __init__.py  conftest.py  test_auth_tool.py  test_create_record.py  test_delete_record.py  test_execute_method.py  (+8 more)
(+36 files in other folders)
